--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,6 @@
     -webkit-padding-start: 2px;
     -moz-padding-start: 2px;
     background-color: #ff5c33; /* fallback color if gradients are not supported */
-    /* background-image: url(../images/select-arrow.png), -webkit-linear-gradient(top, #E5E5E5, #F4F4F4); /* For Chrome and Safari */ */
-    /* background-image: url(../images/select-arrow.png), -moz-linear-gradient(top, #E5E5E5, #F4F4F4); /* For old Fx (3.6 to 15)*/ */
-    /* background-image: url(../images/select-arrow.png), -ms-linear-gradient(top, #E5E5E5, #F4F4F4); /* For pre-releases of IE 10*/ */
-    /* background-image: url(../images/select-arrow.png), -o-linear-gradient(top, #E5E5E5, #F4F4F4); /* For old Opera (11.1 to 12.0) */ */
-    /* background-image: url(../images/select-arrow.png), linear-gradient(to bottom, #E5E5E5, #F4F4F4); /* Standard syntax; must be last */ */
     background-position: center right;
     background-repeat: no-repeat;
     border: 1px solid #AAA;
@@ -30,15 +25,14 @@
     text-indent: 45%;
     }
 
+    #cities option {
+      background-color: #ffd699;
+    }
+
     #right-panel {
       font-family: 'Roboto', 'sans-serif';
       line-height: 15px;
-      /* padding-left: 2px; */
       font-size: 15px;
-    }
-
-    #right-panel input {
-      font-size: 20px;
     }
 
     #map {
@@ -47,6 +41,9 @@
       width: 75%;
     }
 
+    #right-panel input {
+      font-size: 20px;
+    }
 
     #right-panel {
       padding: 10px;
@@ -57,6 +54,7 @@
       text-align: left;
       border-left-style: solid;
       border-left-color: grey;
+      overflow-y: scroll;
     }
 
     #directionsPanel {
@@ -69,6 +67,31 @@
       font-weight: bold;
       padding: 10px 0 0 10px;
       text-align: center;
+    }
+
+    #datebtn span {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .col-centered {
+      float: none;
+      margin: 0 auto;
+    }
+
+    @media (max-width: 768px) {
+      #map {
+      width: 100%;
+      }
+
+      #right-panel {
+        background-color: #ffd699;
+        border-left-style: none;
+        height: auto;
+        text-align: center;
+        width: 100%;
+      }
+
     }
 
 /* Display Quote - css */
