--- a/css/agency.css
+++ b/css/agency.css
@@ -590,8 +590,9 @@ header.masthead .intro-text .intro-heading {
 }
 
 .team-member img {
-  width: 225px;
-  height: 225px;
+  /* width: 225px; */
+  width: 100%;
+  max-height: 100%;
   border: 7px solid #fff;
 }
 
