--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,10 @@ section p.section-subheading {
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.flipcountdown {
+  text-shadow: none !important;
+}
+
 @media (min-width: 768px) {
   section {
     padding: 20px 0;
@@ -73,10 +77,11 @@ section p.section-subheading {
   padding: 20px 40px;
   background-color: #e60000;
   border-color: #e60000;
+  text-shadow: none;
 }
 
 .btn-secondary:active, .btn-secondary:focus {
-  box-shadow: none;
+  /* box-shadow: none; */
 }
 
 ::-moz-selection {
@@ -95,6 +100,16 @@ img::selection {
 
 img::-moz-selection {
   background: transparent;
+}
+
+.grayscaleImage {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+}
+
+.grayscaleImage:not(:hover) {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 #mainNav {
@@ -119,7 +134,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #ff5c33;
+  color: #e60000;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -202,33 +217,6 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-/* .intro-lead-in {
-  animation-duration: 3s;
-  animation-name: slidein;
-} */
-
-/* .intro-heading {
-  animation-duration: 4s;
-  animation-name: fadeInOut;
-  animation-iteration-count: infinite;
-}
-
-@keyframes fadeInOut {
-  0%    { opacity: 0; }
-  100%  { opacity: 1; }
-} */
-/*
-@keyframes slidein {
-  from    {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to     {
-    margin-left: 0%;
-    width: 100%; }
-  } */
-
 @media (min-width: 768px) {
   header.masthead .intro-text {
     padding-top: 300px;
@@ -255,197 +243,21 @@ header.masthead .intro-text .intro-heading {
   text-transform: none;
 }
 
-/*About Section */
-/* .timeline {
-  position: relative;
-  padding: 0;
-  list-style: none;
-}
-
-.timeline:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 40px;
-  width: 2px;
-  margin-left: -1.5px;
-  content: '';
-  background-color: #e9ecef;
-}
-
-.timeline > li {
-  position: relative;
-  min-height: 50px;
-  margin-bottom: 50px;
-}
-
-.timeline > li:after, .timeline > li:before {
-  display: table;
-  content: ' ';
-}
-
-.timeline > li:after {
-  clear: both;
-}
-
-.timeline > li .timeline-panel {
-  position: relative;
-  float: right;
-  width: 100%;
-  padding: 0 20px 0 100px;
-  text-align: left;
-}
-
-.timeline > li .timeline-panel:before {
-  right: auto;
-  left: -15px;
-  border-right-width: 15px;
-  border-left-width: 0;
-}
-
-.timeline > li .timeline-panel:after {
-  right: auto;
-  left: -14px;
-  border-right-width: 14px;
-  border-left-width: 0;
-}
-
-.timeline > li .timeline-image {
-  position: absolute;
-  z-index: 100;
-  left: 0;
-  width: 80px;
-  height: 80px;
-  margin-left: 0;
-  text-align: center;
-  color: white;
-  border: 7px solid #e9ecef;
-  border-radius: 100%;
-  background-color: #fed136;
-}
-
-.timeline > li .timeline-image h4 {
-  font-size: 10px;
-  line-height: 14px;
-  margin-top: 12px;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-  padding: 0 20px 0 100px;
-  text-align: left;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  right: auto;
-  left: -15px;
-  border-right-width: 15px;
-  border-left-width: 0;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  right: auto;
-  left: -14px;
-  border-right-width: 14px;
-  border-left-width: 0;
-}
-
-.timeline > li:last-child {
-  margin-bottom: 0;
-}
-
-.timeline .timeline-heading h4 {
-  margin-top: 0;
-  color: inherit;
-}
-
-.timeline .timeline-heading h4.subheading {
-  text-transform: none;
-}
-
-.timeline .timeline-body > ul,
-.timeline .timeline-body > p {
-  margin-bottom: 0;
-}
-
-@media (min-width: 768px) {
-  .timeline:before {
-    left: 50%;
-  }
-  .timeline > li {
-    min-height: 100px;
-    margin-bottom: 100px;
-  }
-  .timeline > li .timeline-panel {
-    float: left;
-    width: 41%;
-    padding: 0 20px 20px 30px;
-    text-align: right;
-  }
-  .timeline > li .timeline-image {
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-  }
-  .timeline > li .timeline-image h4 {
-    font-size: 13px;
-    line-height: 18px;
-    margin-top: 16px;
-  }
-  .timeline > li.timeline-inverted > .timeline-panel {
-    float: right;
-    padding: 0 30px 20px 20px;
-    text-align: left;
-  }
-}
-
-@media (min-width: 992px) {
-  .timeline > li {
-    min-height: 150px;
-  }
-  .timeline > li .timeline-panel {
-    padding: 0 20px 20px;
-  }
-  .timeline > li .timeline-image {
-    width: 150px;
-    height: 150px;
-    margin-left: -75px;
-  }
-  .timeline > li .timeline-image h4 {
-    font-size: 18px;
-    line-height: 26px;
-    margin-top: 30px;
-  }
-  .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 20px 20px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .timeline > li {
-    min-height: 170px;
-  }
-  .timeline > li .timeline-panel {
-    padding: 0 20px 20px 100px;
-  }
-  .timeline > li .timeline-image {
-    width: 170px;
-    height: 170px;
-    margin-left: -85px;
-  }
-  .timeline > li .timeline-image h4 {
-    margin-top: 40px;
-  }
-  .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 100px 20px 20px;
-  }
-} */
-
 .routesSection {
   padding-top: 30px;
   padding-bottom: 180px;
 }
+
+.spotifyItems a {
+  color: #212529;
+  /* padding: 100 0 100 0; */
+  margin: 100px 0px 100px 0px;
+}
+
+.spotifyItems a:hover {
+  color: #6c757d;
+}
+
 .team-member {
   margin-bottom: 50px;
   text-align: center;
@@ -537,17 +349,8 @@ footer {
 }
 
 footer span.copyright {
-  font-size: 90%;
+  font-size: 80%;
   line-height: 40px;
-  text-transform: none;
-  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-footer ul.quicklinks {
-  font-size: 90%;
-  line-height: 40px;
-  margin-bottom: 0;
   text-transform: none;
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -633,10 +436,8 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
     -moz-padding-end: 20px;
     -webkit-padding-start: 2px;
     -moz-padding-start: 2px;
-    background-color: #6c757d;
     background-position: center right;
     background-repeat: no-repeat;
-    color: #fff;
     font-size: 23px;
     margin: 0;
     overflow: hidden;
@@ -718,7 +519,6 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 /* Display Quote - css */
     .quote {
       opacity: 0;
-      /* transition: opacity 0.7s; */
     }
 
     .quote.onDisplay {
